syntax = "proto3";
package ProtocolBufferExperiments;

// CAUTION: Not Portable! This cannot be guaranteed to work outside .net environments
// You'll have to figure out the conversion to other languages for compatibility
message Decimal {
	int32 lo = 1;
	int32 mid = 2;
	int32 hi = 3;
	sint32 signScale = 4;
}
